--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -1,3 +1,36 @@
+h1, h2 {
+    color: #66c0f4;
+    text-align: center;
+}
+
 h2 {
-    color: darkblue;
+    color: rgb(255, 255, 255);
+}
+
+.gridContainer {
+    width: 100%;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    row-gap: 2rem;
+    column-gap: 2rem;
+    text-align: center;
+    padding: 0 16rem;
+    justify-content: center;
+}
+
+.gridCard {
+    margin: 10px 0 0;
+    background-color: #2a475e;
+    height: 30rem;
+    width: 20rem;
+    transition: 0.6s;
+    justify-self: center;
+}
+
+.gridCard:hover {
+    height: 31rem;
+    width: 20.5rem;
+    transition: 0.6s;
+    justify-self: center;
 }
