--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -9,10 +9,10 @@ h2 {
 
 .gridContainer {
     width: 100%;
+    height: 90%;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(5, 1fr);
-    row-gap: 2rem;
     column-gap: 2rem;
     text-align: center;
     padding: 0 16rem;
