--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -62,3 +62,29 @@ h2 {
     font-size: 1.9rem;
     transition: .6s;
 }
+
+@media screen and (max-width: 1200px) {
+    .gridContainer {
+        width: 100%;
+        height: 90%;
+        display: grid;
+        grid-template-columns: auto auto;
+        text-align: center;
+        padding: 0 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .gridContainer {
+        width: 100%;
+        height: 90%;
+        display: grid;
+        grid-template-columns: auto;
+        text-align: center;
+        padding: 0 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+}
