--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 .gridCard {
-    margin: 10px 0 0;
+    margin: 10px 0 2rem;
     background-color: #2a475e;
     height: 30rem;
     width: 20rem;
