--- a/client/src/pages/Profile.module.css
+++ b/client/src/pages/Profile.module.css
@@ -1,1 +1,72 @@
 /* TODO */
+.bannerContainer {
+    position: relative;
+  }
+  
+  .bannerImage {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+.bannerText {
+    color: white;
+    margin: 0;
+  }
+
+.profileContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    flex-direction: column;
+  }
+  
+  .profilePictureContainer {
+    margin-bottom: 1rem;
+  }
+  
+  .profilePicture {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  .profileName {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+  
+  .profileDetails {
+    color: white;
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  @media screen and (max-width: 1200px) {
+    .gridContainer {
+        width: 100%;
+        height: 90%;
+        display: grid;
+        grid-template-columns: auto auto;
+        text-align: center;
+        padding: 0 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .gridContainer {
+        width: 100%;
+        height: 90%;
+        display: grid;
+        grid-template-columns: auto;
+        text-align: center;
+        padding: 0 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+}
