--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -1,90 +1,85 @@
-h1, h2 {
-    color: #66c0f4;
-    text-align: center;
+h1,
+h2 {
+  color: #66c0f4;
+  text-align: center;
 }
 
 h2 {
-    color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
 }
 
 .gridContainer {
-    width: 100%;
-    height: 90%;
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(5, 1fr);
-    column-gap: 2rem;
-    text-align: center;
-    padding: 0 16rem;
-    justify-content: center;
-    margin: 2rem 0 0;
+  width: 100%;
+  height: 90%;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 2rem;
+  text-align: center;
+  padding: 0 16rem;
+  justify-content: center;
+  margin: 2rem 0 0;
 }
 
 .gridCard {
-    margin: 10px 0 2rem;
-    background-color: #2a475e;
-    height: 30rem;
-    width: 20rem;
-    transition: 0.6s;
-    justify-self: center;
+  margin: 10px 0 2rem;
+  background-color: #2a475e;
+  height: 30rem;
+  width: 20rem;
+  transition: 0.6s;
+  justify-self: center;
 }
 
 .gridCard img {
-    margin: 1.2rem 0 0;
-    width: 280px;
-    height: 360px;
-    transition: .6s;
+  margin: 1.2rem 0 0;
+  width: 280px;
+  height: 360px;
+  transition: 0.6s;
 }
 
 .gridCard p {
-    margin: 1.8rem;
-    color: white;
-    font-size: 1.8rem;
-    background-color: #2a475e;
-    transition: .6s;
+  margin: 1.8rem 0;
+  color: white;
+  font-size: 1.6rem;
+  background-color: #2a475e;
+  transition: 0.6s;
 }
 
 .gridCard:hover {
-    height: 31rem;
-    width: 20.5rem;
-    transition: 0.6s;
-    justify-self: center;
+  height: 31rem;
+  width: 20.5rem;
+  transition: 0.6s;
+  justify-self: center;
 }
 
-.gridCard:hover >img {
-    width: 289px;
-    height: 372px;
-    transition: .6s
-}
-
-.gridCard:hover >p {
-    margin: 1.9rem;
-    font-size: 1.9rem;
-    transition: .6s;
+.gridCard:hover > img {
+  width: 289px;
+  height: 372px;
+  transition: 0.6s;
 }
 
 @media screen and (max-width: 1200px) {
-    .gridContainer {
-        width: 100%;
-        height: 90%;
-        display: grid;
-        grid-template-columns: auto auto;
-        text-align: center;
-        padding: 0 1rem;
-        justify-content: center;
-        align-items: center;
-    }
+  .gridContainer {
+    width: 100%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: auto auto;
+    text-align: center;
+    padding: 0 1rem;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .gridContainer {
-        width: 100%;
-        height: 90%;
-        display: grid;
-        grid-template-columns: auto;
-        text-align: center;
-        padding: 0 1rem;
-        justify-content: center;
-        align-items: center;
-    }
+  .gridContainer {
+    width: 100%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: auto;
+    text-align: center;
+    padding: 0 1rem;
+    justify-content: center;
+    align-items: center;
+  }
 }
