--- a/client/src/containers/Header.module.css
+++ b/client/src/containers/Header.module.css
@@ -1,120 +1,131 @@
 .header {
-    position: fixed;
-    width: 100%;
-    height: 50px;
-    display: grid;
-    grid-template-rows: repeat(1, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    margin: 0;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  display: grid;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  margin: 0;
 }
 
 .containerLeft,
 .containerMiddle,
 .containerRight {
-    background-color: rgb(13, 13, 13);
+  background-color: rgb(13, 13, 13);
 }
 
 .containerLeft {
-    position: relative;
-
+  position: relative;
 }
 
 .containerMiddle {
+  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.containerRight {
+  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 1rem;
+}
+
+.title {
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+  font-family: "Rubik Mono One", sans-serif;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-left: 1rem;
+}
+
+.search {
+  text-align: left;
+  border-radius: 6px;
+  width: 50%;
+  background-color: rgb(42, 42, 42);
+  color: white;
+  height: 30px;
+}
+
+.login {
+  display: inline-block;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: rgb(42, 42, 42);
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0 1px #4f4f4f;
+}
+
+.login:hover {
+  background-color: #202020;
+}
+
+.login:active {
+  background-color: #2a475e;
+  box-shadow: 0 0.5px #4f4f4f;
+  transform: translateY(2px);
+}
+
+.profile {
+  margin-right: 1rem; /* add margin to profile button */
+}
+
+.profileImage {
+  width: 30px; 
+  height: 30px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+  object-position: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .search {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    position: fixed;
+    width: 100%;
+    height: 150px;
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0;
+  }
+  .containerRight {
     text-align: right;
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    padding: 16px 0;
+  }
 
-.containerRight {
-    text-align: right;
+  .containerLeft {
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: flex-end;
-    padding-right: 1rem;
-}
+  }
 
-.title {
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-    font-family: 'Rubik Mono One', sans-serif;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    padding-left: 1rem;
-}
-
-.search {
-    text-align: left;
-    border-radius: 6px;
+  .search {
     width: 50%;
-    background-color: rgb(42, 42, 42);
-    color: white;
-    height: 30px;
-}
-
-.login {
-    display: inline-block;
-    font-size: 18px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: rgb(42, 42, 42);
-    border: none;
-    border-radius: 6px;
-    box-shadow: 0 1px #4f4f4f;
-}
-
-.login:hover {
-    background-color: #202020
-}
-
-.login:active {
-    background-color: #2a475e;
-    box-shadow: 0 0.5px #4f4f4f;
-    transform: translateY(2px);
-}
-
-@media screen and (max-width: 1200px) { 
-    .search {
-        width: 75%
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .header {
-        position: fixed;
-        width: 100%;
-        height: 150px;
-        display: grid;
-        grid-template-columns: auto;
-        margin: 0;
-    }
-    .containerRight {
-        text-align: right;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 16px 0;
-    }
-
-    .containerLeft {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .search {
-        width: 50%
-    }
+  }
 }
 
 @media screen and (max-width: 600px) {
-    .search {
-        width: 65%
-    }
+  .search {
+    width: 65%;
+  }
 }
