Final touches on Game, Home, Login and Profile css for mobile view

--- a/client/src/pages/Game.module.css
+++ b/client/src/pages/Game.module.css
@@ -89,3 +89,15 @@
 .comment {
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 1200px) { 
+    .addComment {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 768px) { 
+    .coverArt {
+        margin-top: 75px;
+    }
+}
