--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -82,4 +82,12 @@ h2 {
     justify-content: center;
     align-items: center;
   }
+
+  h1 {
+    margin-top: 70px;
+  }
+
+  h2 {
+    margin-top: 15px;
+  }
 }
