--- a/client/src/pages/Profile.module.css
+++ b/client/src/pages/Profile.module.css
@@ -14,6 +14,11 @@
     margin: 15px 0;
   }
 
+  .favoriteGameContainer {
+    display: flex;
+    justify-content: center;
+  }
+
 .profileContainer {
     display: flex;
     justify-content: center;
@@ -31,10 +36,6 @@
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
-  }
-
-  .profileGame {
-    align-items: center;
   }
   
   .profileName {
